# TheSquadFFB

./: .gitignore  HowTo.txt  LICENSE  README.md  RVersionInfo.txt  R_run_testing.R  app.py  app_data.json  dataTargets.txt  download_pbps.py  gatherPBP.R  requirements.txt
fantasy_data/: wr_week1_2023.csv
install/: LICENSE  audit_db.R  cy_refresh.R  get_data.R  get_new_data.R  populate_pbp_db.R  setup_utils.R
module_R/: main.R  plot_testing.R  query_utils.R
module_cpp/: CMakeLists.txt  README_learn.md  main.cpp
module_cpp/include/: MainWindow.h
module_cpp/src/: MainWindow.cpp
module_py/: main.py  query_utils.py  requirements.txt  test_fastapi.py  utils.py
rscripts/: R_run_testing.R  main.R  populate_pbp_db.R  query_utils.R  setup_utils.R
